clear rows and drop stack, fix scaling on firefox

--- a/style.css
+++ b/style.css
@@ -3,3 +3,7 @@ body {
   display: flex;
   justify-content: center;
 }
+
+svg {
+  height: 96vh;
+}
